# Ratatosk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  phasing.md  variant_calling.md
Ratatosk_nf/: README.md  Ratatosk.nf  nextflow.config  params.yaml
Ratatosk_nf/config/: pipeline.config  tools.config
scripts/: replaceIUPAC.py
scripts/multi_nodes_denovo_correction/: README.md  Ratatosk_denovo_SLURM.sh
scripts/reference_guided_correction/: README.md  Ratatosk_Ref_SLURM.sh  Ratatosk_Ref_SingleNode.sh
scripts/reference_guiding/: README.md  Ratatosk.sh  Ratatosk_SLURM.sh  Ratatosk_SingleNode.sh  segmentBAM.py
src/: Alignment.cpp  Alignment.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Correction.cpp  Correction.hpp  Graph.cpp  Graph.hpp  GraphTraversal.cpp  GraphTraversal.hpp  PairID.cpp  PairID.hpp  Path.hpp  Ratatosk.cpp  ResultCorrection.hpp  SharedPairID.cpp  SharedPairID.hpp  TinyBloomFilter.hpp  UnitigData.hpp
